# ModAB-Root-Finding

./: README.md
C#/: Root.sln
C#/Root.Benchmark/: Benchmark.cs  BenchmarkCount.cs  Root.Benchmark.csproj
C#/Root/Solvers/: AndersonBjork.cs  Bisection.cs  Brent.cs  ModAB.cs  Ridders.cs
C/include/: ModAB.h
Fortran/: README.md
Fortran/results/: Test_results.xlsx
Julia/: BenchmarkResults.txt  ModAB_CS.jl  Results summary.md  Weierstrass_modab_benchmark.jl  nonlinearsolve_modab_benchmark.jl  roots_modab_benchmark.jl
MDPI-Algorithms-Data/: Test Results.xlsx
ModAB-C#/Root/: ExtensionMethods.cs  Node.cs
ModAB-C#/Root.Benchmark/: Problem.cs  Program.cs
ModAB-C#/Root/Solvers/: ITP.cs  (+4 more)
ModAB-Julia/: BenchmarkResults.ods  ModAB_CS.jl  Weierstrass_modab_benchmark.jl  nonlinearsolve_modab_benchmark.jl  roots_modab_benchmark.jl
ModAB-Julia/NonlinearSolve.jl/: nonlinearsolve_modab__speed_benchmark.jl
ModAB-Python/: BenchmarkResults.md  Readme.md  RootBenchmark.py
ModAB-Python-SciPy/: BenchmarkResults.ods  BenchmarkResults.txt  ModAB.py  Results summary.md  RootBenchmark.py
ModAB-Python/PyModAB/: README.md  pyproject.toml
ModAB-Python/include/: ModAB.h
ModAB-Python/src/: ModAB.c  libModAB_x64.dylib
ModAB-ROOT-CPP/: CMakeLists.txt  root_benchmark.cpp
Python/: Readme.md
Python/Native/: ModAB.py  ModAB_test.py  Test Results.txt
Python/PyModAB/: MANIFEST.in  README.md  build_wheel.bat  pyproject.toml
ROOT.CERN-CXX/: ext_benchmark.cpp  root_benchmark_results.txt
Rust/: Cargo.toml  bench_results.md
Rust/src/: ModAB.rs  main.rs
Zig/: ModAB.zig
(+25 files in other folders)
